refactor: restructure Dockerfile for multi-stage builds, remove unused environment variables from docker-compose, and update README for clarity
- Updated Dockerfile to implement multi-stage builds for optimized image size and build efficiency.
- Removed unused environment variables from docker-compose.yml to streamline configuration.
- Enhanced README with clearer feature descriptions and added a section on TradingView API timeframes.
- Added `jszip` dependency to package.json for improved functionality.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "express-ws": "^5.0.2",
     "https-proxy-agent": "^7.0.6",
+    "jszip": "^3.10.1",
     "prom-client": "^14.0.0",
     "socks-proxy-agent": "^8.0.5",
     "winston": "^3.8.2",
