--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "dependencies": {
     "@types/ws": "^8.18.1",
     "axios": "^1.6.0",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-ws": "^5.0.2",
     "https-proxy-agent": "^7.0.6",
     "jszip": "^3.10.1",
     "prom-client": "^14.0.0",
     "socks-proxy-agent": "^8.0.5",
-    "winston": "^3.8.2",
+    "winston": "^3.17.0",
     "ws": "^8.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/node": "^22.15.19",
     "jest": "^29.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^5.0.0"
