feat: implement health monitoring system for TradingView microservice
- Introduced a comprehensive health monitoring system to track and manage stale subscriptions in the TradingView data flow.
- Added new environment variables in .env for health monitoring configuration, including `HEALTH_CHECK_INTERVAL_MS`, `HEALTH_STALE_THRESHOLD_MULTIPLIER`, `HEALTH_AUTO_RECOVERY_ENABLED`, `HEALTH_MAX_RECOVERY_ATTEMPTS`, `HEALTH_FULL_RECONNECT_THRESHOLD`, `HEALTH_FULL_RECONNECT_COOLDOWN_MS`, and `HEALTH_API_PORT`.
- Updated README to document the health monitoring system, its configuration, and operational details.
- Enhanced the config module to parse health monitoring settings from environment variables.
- Implemented health monitoring logic in the main application, including event handling for stale subscriptions and recovery attempts.
- Added Prometheus metrics for monitoring health-related statistics, such as stale subscriptions and recovery attempts.

--- a/.env
+++ b/.env
@@ -11,3 +11,12 @@ WEBSOCKET_PORT=8081
 
 LOG_LEVEL=debug
 DEBUG_PRICES=true
+
+# Health Monitoring System
+HEALTH_CHECK_INTERVAL_MS=60000
+HEALTH_STALE_THRESHOLD_MULTIPLIER=3
+HEALTH_AUTO_RECOVERY_ENABLED=true
+HEALTH_MAX_RECOVERY_ATTEMPTS=3
+HEALTH_FULL_RECONNECT_THRESHOLD=3
+HEALTH_FULL_RECONNECT_COOLDOWN_MS=600000
+HEALTH_API_PORT=8082
