chore: update Dockerfile and package.json for TypeScript build process and dependency management
- Modified Dockerfile to install TypeScript globally and adjust the build command to use `tsc` directly.
- Updated package.json to use `npx` for the TypeScript compiler in the build script.
- Updated package-lock.json to reflect changes in dependencies and their versions.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node dist/main.js",
     "dev": "ts-node src/main.ts",
     "test": "jest",
-    "build": "tsc --project tsconfig.json --skipLibCheck",
+    "build": "npx tsc --project tsconfig.json --skipLibCheck",
     "test:ws": "node examples/websocket-client.js"
   },
   "dependencies": {
